--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+    <title>Earth</title>
   </head>
+  <style>
+    .heading{
+      background-color: #005A9C;
+      text-align:center;
+      font-size:90px;
+    }
+    .text{
+      background-color:#967BB6;
+      text-align: center;
+      font-size:45px;
+  </style>
   <body>
-    <img src="img.png"/>
+    <p class="heading"/>
+      Earth
+    </p>
+    <p class="text"/>
+       Have you ever wondered how far the Earth is from the Sun? Or what makes Earth unique compared to other planets in our solar system, and why it's so perfect for supporting life?
+       Have you ever wondered what would happen to Earth if its Moon were to suddenly disappear? If you don't have the answer, get it here!
+       Earth is the third planet from the Sun, and its surface area is 510.1 million square kilometers. Here is an image that shows the distance from the Earth to the Sun:
+    </p>
+    <br/>
   </body>
 </html>
