--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
        Earth is the third planet from the Sun, and its surface area is 510.1 million square kilometers. Here is an image that shows the distance from the Earth to the Sun:
     </p>
     <br/>
+    <img src="spacethang.png"/>
   </body>
 </html>
