--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       they settled in, started a family, downloaded all the apps and lived happily ever after. Here is a graphical representation of the experiment:
     </p>
     <br/>
-    <img src=
+    <br/>
+    <p class="text"/>
+      
+    </p>
   </body>
 </html>
