--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
     <br/>
     <p class="text"/>
       The size and distance may not be accurate in this photo but the position is! This photo proves that the Earth is the third planet from the Sun, and we'll right now
-      get into the reason for its ability to sustain life. This might also explain aliens too. So, imagine this. There is an alien species, and their planet was destroyed by a collision with another
-      planet somehow. So, they needed to find a new planet. The planet the first spaceship tried looked nice and warm, but it was too hot and they shriveled up to death. The planet the second spaceship tried seemed nice and cool, but can you
-      guess what happened? Yup, they didn't make it due to hypothermia. But they needed to find a new planet, so one day, a third spaceship landed on a planet that seemed warm, but not as hot as the first planet, and it was just right. So
-      they settled in, started a family, downloaded all the apps and lived happily ever after. Here is a graphical representation of the experiment:
+      get into the reason for its ability to sustain life. This might also explain aliens too. In Mercury, you would shrivel up and die. While in Uranus, you would
+      get a serious case of hypotherima.
     </p>
     <br/>
     <br/>
