--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"l>
   <head>
     <title>Earth</title>
   </head>
@@ -13,6 +13,7 @@
       background-color:#967BB6;
       text-align: center;
       font-size:45px;
+    }
   </style>
   <body>
     <p class="heading"/>
@@ -21,7 +22,7 @@
     <p class="text"/>
        Have you ever wondered how far the Earth is from the Sun? Or what makes Earth unique compared to other planets in our solar system, and why it's so perfect for supporting life?
        Have you ever wondered what would happen to Earth if its Moon were to suddenly disappear? If you don't have the answer, get it here!
-       Earth is the third planet from the Sun, and its surface area is 510.1 million square kilometers. Here is an image that shows the distance from the Earth to the Sun:
+       Earth is the third planet from the Sun, and its surface area is 510.1 million square kilometers. Here is an image that shows Earth's distance:
     </p>
     <br/>
     <img src="spacethang.png"/>
@@ -29,7 +30,8 @@
     <p class="text"/>
       The size and distance may not be accurate in this photo but the position is! This photo proves that the Earth is the third planet from the Sun, and we'll right now
       get into the reason for its ability to sustain life. This might also explain aliens too. In Mercury, you would shrivel up and die. While in Uranus, you would
-      get a serious case of hypotherima.
+      get a serious case of hypothermia. Do you know why? If not, here's the answer. Look closely at the image that shows the Earth's distance. Uranus is too far, Mercury is too close,
+      but Earth is just right. It's in the zone scientists call the "Goldilocks Zone".
     </p>
     <br/>
     <br/>
