--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"l>
+<html lang="en">
   <head>
     <title>Earth</title>
   </head>
@@ -8,11 +8,13 @@
       background-color: #005A9C;
       text-align:center;
       font-size:90px;
+      padding:45px;
     }
     .text{
       background-color:#967BB6;
       text-align: center;
       font-size:45px;
+      padding:45px;
     }
   </style>
   <body>
@@ -31,7 +33,7 @@
       The size and distance may not be accurate in this photo but the position is! This photo proves that the Earth is the third planet from the Sun, and we'll right now
       get into the reason for its ability to sustain life. This might also explain aliens too. In Mercury, you would shrivel up and die. While in Uranus, you would
       get a serious case of hypothermia. Do you know why? If not, here's the answer. Look closely at the image that shows the Earth's distance. Uranus is too far, Mercury is too close,
-      but Earth is just right. It's in the zone scientists call the "Goldilocks Zone".
+      but Earth is just right. It's in the zone scientists call the "Goldilocks Zone". Scientists estimate that there could be 40 billion planets perfect for life in the Milky Way alone.
     </p>
     <br/>
     <br/>
