--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
       text-align:center;
       font-size:90px;
       padding:75px;
+      margin: 32px;
     }
     .text{
       background-color:#967BB6;
       text-align: center;
       font-size:45px;
       padding:45px;
+      margin: 22px;
     }
   </style>
   <body>
