--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
       text-align:center;
       font-size:90px;
       margin: 30px;
-      padding-bottom: 40px;
+      padding: 49px;
     }
     .text{
       background-color:#967BB6;
       text-align: center;
       font-size:45px;
       margin: 50px;
-      padding-top: 40px;
+      padding: 49px;
     }
   </style>
   <body>
