--- a/index.html
+++ b/index.html
@@ -1,46 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <title>Earth</title>
-  </head>
-  <style>
-    .heading{
-      background-color: #005A9C;
-      text-align:center;
-      font-size:90px;
-      margin: 30px;
-      padding: 100px;
-    }
-    .text{
-      background-color:#967BB6;
-      text-align: center;
-      font-size:45px;
-      margin: 50px;
-      padding: 100px;
-    }
-  </style>
-  <body>
-    <p class="heading"/>
-      Earth
-    </p>
-    <p class="text"/>
-       Have you ever wondered how far the Earth is from the Sun? Or what makes Earth unique compared to other planets in our solar system, and why it's so perfect for supporting life?
-       Have you ever wondered what would happen to Earth if its Moon were to suddenly disappear? If you don't have the answer, get it here!
-       Earth is the third planet from the Sun, and its surface area is 510.1 million square kilometers. Here is an image that shows Earth's distance:
+    <style>
+        .heading {
+            background-color: #005A9C;
+            text-align: center;
+            font-size: 90px;
+            margin: 0; /* Removed margin to join with text */
+            padding: 50px; /* Reduced padding for a more compact look */
+        }
+        .text {
+            background-color: #967BB6;
+            text-align: center;
+            font-size: 45px;
+            margin: 0; /* Removed margin to join with heading */
+            padding: 50px; /* Reduced padding for a more compact look */
+        }
+    </style>
+</head>
+<body>
+    <p class="heading">Earth</p>
+    <p class="text">
+        Have you ever wondered how far the Earth is from the Sun? Or what makes Earth unique compared to other planets in our solar system, and why it's so perfect for supporting life?
+        Have you ever wondered what would happen to Earth if its Moon were to suddenly disappear? If you don't have the answer, get it here!
+        Earth is the third planet from the Sun, and its surface area is 510.1 million square kilometers. Here is an image that shows Earth's distance:
     </p>
     <br/>
-    <img src="spacethang.png"/>
+    <img src="spacethang.png" alt="Image showing Earth's distance from the Sun"/>
     <br/>
-    <p class="text"/>
-      The size and distance may not be accurate in this photo but the position is! This photo proves that the Earth is the third planet from the Sun, and we'll right now
-      get into the reason for its ability to sustain life. This might also explain aliens too. In Mercury, you would shrivel up and die. While in Uranus, you would
-      get a serious case of hypothermia. Do you know why? If not, here's the answer. Look closely at the image that shows the Earth's distance. Uranus is too far, Mercury is too close,
-      but Earth is just right. It's in the zone scientists call the "Goldilocks Zone". Scientists estimate that there could be 40 billion planets perfect for life in the Milky Way alone.
+    <p class="text">
+        The size and distance may not be accurate in this photo, but the position is! This photo proves that the Earth is the third planet from the Sun, and we'll right now
+        get into the reason for its ability to sustain life. This might also explain aliens too. In Mercury, you would shrivel up and die. While in Uranus, you would
+        get a serious case of hypothermia. Do you know why? If not, here's the answer. Look closely at the image that shows the Earth's distance. Uranus is too far, Mercury is too close,
+        but Earth is just right. It's in the zone scientists call the "Goldilocks Zone". Scientists estimate that there could be 40 billion planets perfect for life in the Milky Way alone.
     </p>
     <br/>
-    <br/>
-    <p class="text"/>
-      
+    <p class="text">
+        <!-- You can add more content here -->
     </p>
-  </body>
+</body>
 </html>
