--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
             background-color: #005A9C;
             text-align: center;
             font-size: 90px;
-            margin: 0; /* Removed margin to join with text */
-            padding: 60px; /* Reduced padding for a more compact look */
+            padding: 60px; 
         }
         .text {
             background-color: #967BB6;
             text-align: center;
             font-size: 45px;
-            margin: 0; /* Removed margin to join with heading */
-            padding: 60px; /* Reduced padding for a more compact look */
+            padding: 60px; 
+        .conclusion{
+            border: dotted blue;
+            padding: 60px;
         }
     </style>
 </head>
@@ -26,18 +27,17 @@
         Have you ever wondered what would happen to Earth if its Moon were to suddenly disappear? If you don't have the answer, get it here!
         Earth is the third planet from the Sun, and its surface area is 510.1 million square kilometers. Here is an image that shows Earth's distance:
     </p>
-    <br/>
     <img src="spacethang.png" alt="Image showing Earth's distance from the Sun"/>
-    <br/>
     <p class="text">
         The size and distance may not be accurate in this photo, but the position is! This photo proves that the Earth is the third planet from the Sun, and we'll right now
         get into the reason for its ability to sustain life. This might also explain aliens too. In Mercury, you would shrivel up and die. While in Uranus, you would
         get a serious case of hypothermia. Do you know why? If not, here's the answer. Look closely at the image that shows the Earth's distance. Uranus is too far, Mercury is too close,
         but Earth is just right. It's in the zone scientists call the "Goldilocks Zone". Scientists estimate that there could be 40 billion planets perfect for life in the Milky Way alone.
+        But here is a drastic question. What would happen to Earth if the Moon disappeared? Well for starters, the Moon uses gravity to hold our planet in place. but if we removed it, then there would be either
+        extreme season change or no season change at all. This could simulate the Ice Age.
     </p>
-    <br/>
-    <p class="text">
-        <!-- You can add more content here -->
+    <p class="conclusion">
+        In conclusion, Earth is the only planet able to sustain life in our solar system. The Moon is also very important. Earth has a ton of factors that make it so great.
     </p>
 </body>
 </html>
