--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         Have you ever wondered what would happen to Earth if its Moon were to suddenly disappear? If you don't have the answer, get it here!
         Earth is the third planet from the Sun, and its surface area is 510.1 million square kilometers. Here is an image that shows Earth's distance:
     </p>
-    <img src="spacethang.png" alt="Image showing Earth's distance from the Sun"/>
+    <img src="spacethang.png"/>
     <p class="text">
         The size and distance may not be accurate in this photo, but the position is! This photo proves that the Earth is the third planet from the Sun, and we'll right now
         get into the reason for its ability to sustain life. This might also explain aliens too. In Mercury, you would shrivel up and die. While in Uranus, you would
@@ -39,5 +39,8 @@
     <p class="conclusion">
         In conclusion, Earth is the only planet able to sustain life in our solar system. The Moon is also very important. Earth has a ton of factors that make it so great.
     </p>
+    <a href="https://nikoskalnis.github.io/planets.com/"/>
+        Return to Space Page
+    </a>
 </body>
 </html>
