--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-size: 45px;
             padding: 60px; 
         .conclusion{
-            border: dotted blue;
+            border:2px dotted blue;
             padding: 60px;
         }
     </style>
